--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>扫雷</title>
     <link rel="stylesheet" href="css/index.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="mine">
@@ -16,6 +17,12 @@
       </div>
       <div class="game-box"></div>
       <p class="info">剩余雷数：<span class="mine-num"></span></p>
+      <div class="mask">
+        <div class="info">
+          <h1></h1>
+          <button>重新开始</button>
+        </div>
+      </div>
     </div>
 
     <script src="js/index.js"></script>
